feat: add Joi validation for authors and books
- Added Joi schemas for POST and PUT requests
- Integrated validate middleware into routes
- Updated mongoose schemas
- Adjusted REST client files for local and live environements
